# LLM-Explore

./: .gitignore  ReadMe.md  pyproject.toml  requirements.txt
.roo/: mcp.json
src/: search-engine.ipynb  structured-output.ipynb
src/agent/: base.ipynb  weather_agent.ipynb  weather_agent.py  weather_chatbot.py
src/agent/agno-usage/: first.py  start.ipynb
src/agent/company_knowledge_base/: load_knowledge.py
src/agent/contact-query/: chainlit-ui.py  custom_retriever_rag.py  load_contact_knowledge_v1.py  load_contact_knowledge_v2.py  mammoth_convert.ipynb  markitdown_convert.py  query_base_rag.ipynb  query_base_rag.py  query_base_rag_custom_retriever.py  query_base_sql.py  start.ipynb  view_lancedb.ipynb
src/agent/deep_researcher/: deep-researcher-deerflow.ipynb  (+1 more)
src/crawl4ai-usage/: custeel-crawler.py  llm-usage.ipynb  start.ipynb  start.py  start_basic.py
src/data-any/: start.ipynb
src/docstring-usage/: start.ipynb
src/gemini/: start.ipynb
src/instructor-usage/: planner.ipynb  start.ipynb
src/langGraph-usage/: graph.ipynb  graph.py  prompt_template.py  start.ipynb
src/litellm-usage/: gemini-case.ipynb  gemini-chainlit.py  localmodel.ipynb  openai-compatible.ipynb
src/llm-compare/: start.ipynb
src/ollama-usage/: embed.ipynb
src/openai-chat/: test.ipynb
src/openrouter/: start.ipynb
src/prompt-engineering/: claude.ipynb  gpt.ipynb  instruction-following-ability.ipynb  manus.ipynb  roo-code.ipynb
src/usage/: invoice.ipynb  invoice.py
src/utils/: content_id.py  filter_color.py  llms.py  tools.py  transfer_doc2docx.py  weather.py
(+106 files in other folders)
