[project]
name = "llm-explore"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "agno",
  "openai",
  "lancedb",
  "mammoth",
  "cohere",
  "infinity_client",
  "ipykernel",
  "tantivy",
  "pandas",
  "pylance",
  "fastapi",
  "uvicorn",
  "chainlit>=2.5.5",
  "langchain>=0.3.25",
  "langchain-openai>=0.3.23",
  "langchain-google-genai>=2.1.5",
  "langgraph>=0.4.8",
  "ollama>=0.5.1",
  "dashscope>=1.23.5",
  "exa-py>=1.9.1",
  "crawl4ai>=0.6.3",
  "playwright>=1.52.0",
  "jina>=3.8.2",
]
